--- a/hanoi/README
+++ b/hanoi/README
@@ -1,2 +1,2 @@
-hanoi.c makes an animation of animation of the resolution of the Towers of Hanoi,
+hanoi2.c makes an animation of animation of the resolution of the Towers of Hanoi,
 so you can see how the computer solve it
